# Multimodal-Agentic-RAG-System

./: .gitignore  main.py  pyproject.toml
evqa_eval/: eval_example.py  evaluation_utils.py  pyproject.toml  run_eval.py  score_evqa.py
notebooks/: 00_overview.ipynb  01_dataset.ipynb  02_comparison.ipynb  03_recall_curve.ipynb  pyproject.toml
notebooks/strategies/: B1_topk1_first3.ipynb  B2_1_topk5_allsections.ipynb  B3_topk5_clip.ipynb  B4_1_topk5_crossencoder_top15.ipynb  B4_topk5_crossencoder.ipynb  baseline_B.ipynb
scripts/: bash.sh  build_kb_sqlite.sh  jupyter_cvcs.sh  run_ablation_cross.sh  run_agentic_eval.sh  run_agentic_vllm.sh  run_baseline_B.sh  run_evaluation.sh  run_inference.sh  run_recall.sh  setup_vllm_venv.sh  test_ablation.sh
src/ablation/: aggregate_ablation.py  create_val_split.py  run_ablation_cross.py
src/agent/: __init__.py  log.py  messages.py  prompts.py  qwen_langchain.py  rag.py  react_agent.py  run_agentic_eval.py  tools.py
src/agent/evaluation/: __init__.py  config.py  metrics.py  runner.py
src/agent/schemas/: __init__.py  retrieval.py  run.py
src/eval/: score_evqa.py
src/retrieval/: build_kb_sqlite.py  compute_recall.py  knowledge_base.py  reranker.py  retriever.py  retrival.py
src/vlm/: __init__.py  arg_parser.py  qwen_model.py  run_inference.py
