[project]
name = "cvcs2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "faiss-cpu>=1.14.3",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pillow>=12.3.0",
    "qwen-vl-utils==0.0.8",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.workspace]
exclude = [
    "evqa_eval",
]
